[metadata]
author = Johan Dahlin
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
description = My package description
name = storeclient
license = MIT license
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
version = attr: storeclient.__version__.version

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
  requests==2.22.0

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[devpi:upload]
formats = sdist.tgz,bdist_wheel
